{{$NEXT}}

Drivers:
* LT::Jablonskis
* LT::Multext: Subjunctive mood changed to conditional, in order to make it
  more parallel to other Lithuanian and Latvian corpora in UD.
* Changed mapping of Lithuanian non-finite verb forms:
  * dalyvis (participle) = verb, participle
  * padalyvis (same subject converb) = verb, gerund
  * pusdalyvis (different subject converb) = verb, converb
  * būdinys (adverbial participle of manner) = adverb, converb



3.014     2019-01-31 14:30:16+01:00 Europe/Prague

Drivers:
* LT::Multext: The sixth character of nouns is not adjform. It is probably
  reflexivity.
* LT::Multext: The seventh character of adjectives, sixth of pronouns, seventh
  of numerals and tenth of verbs is better characterized as definiteness,
  although adjform is not exactly wrong.
* LT::Multext: The last character of verbs (participles only) is degree
  of comparison.



3.013     2019-01-14 21:42:51+01:00 Europe/Prague

Features:
* Feature 'numform': added value 'combi' (combined digits + suffix).

Drivers:
* LT::Multext



3.012     2018-05-15 11:11:11+02:00 Europe/Prague

Interface:
* FS methods add_ufeatures() and get_ufeatures() now store unknown language-
  specific features or values in the 'other' feature (and set tagset to
  'mul::uposf').



3.011     2018-02-18 14:17:13+01:00 Europe/Prague

Features:
* Feature 'case': added values 'per' (perlative) and 'cns' (considerative).

Drivers:
* en::penn --> mul::upos conversion adjusted according to
  https://github.com/UniversalDependencies/docs/issues/157
  (verbal particles RP and alphanumeric list bullets LS)



3.010     2017-11-27 21:11:31+01:00 Europe/Prague

Drivers:
* pt::freeling should not encode "PA*" (pronoun-article) and "DR*" (relative
  determiner)



3.009     2017-11-27 16:15:22+01:00 Europe/Prague

Fixes:
* A value encoded by Atom should be deterministic even if the
  encoding map allows multiple paths.



3.008     2017-11-18 16:44:01+01:00 Europe/Prague

Features: